<resources>
    <string name="app_name">Chat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">user account</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Login</string>
    <string name="action_register_in">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_account_error_hint">用户名不能为空</string>
    <string name="login_error_password_hint">密码不能为空</string>
    <string name="person_img_face">头像</string>
    <string name="more">更多</string>
    <string name="my_address">我的地址</string>
    <string name="reach_the_bottom">加载完成~</string>
</resources>
